--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.6/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
@@ -8,11 +8,12 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "ignore": [
-      "packages/server/src/db/*",
-      "**/routeTree.gen.ts",
-      "**/messages.ts",
-      "**/migrations/*"
+    "includes": [
+      "**",
+      "!**/packages/server/src/db/**/*",
+      "!**/routeTree.gen.ts",
+      "!**/messages.ts",
+      "!**/migrations/**/*"
     ]
   },
   "formatter": {
@@ -26,7 +27,7 @@
     "attributePosition": "auto",
     "bracketSpacing": true
   },
-  "organizeImports": { "enabled": false },
+  "assist": { "actions": { "source": { "organizeImports": "off" } } },
   "linter": {
     "enabled": true,
     "rules": {
@@ -51,7 +52,17 @@
         "recommended": true
       },
       "style": {
-        "recommended": true
+        "recommended": true,
+        "noParameterAssign": "error",
+        "useAsConstAssertion": "error",
+        "useDefaultParameterLast": "error",
+        "useEnumInitializers": "error",
+        "useSelfClosingElements": "error",
+        "useSingleVarDeclarator": "error",
+        "noUnusedTemplateLiteral": "error",
+        "useNumberNamespace": "error",
+        "noInferrableTypes": "error",
+        "noUselessElse": "error"
       },
       "suspicious": {
         "recommended": true
