--- a/.github/workflows/server-test.yml
+++ b/.github/workflows/server-test.yml
@@ -30,6 +30,10 @@ jobs:
         id: test
         run: |
           pnpm --filter seon-server test | tee test-output.txt
-          echo "test_output<<EOF" >> $GITHUB_OUTPUT
-          cat test-output.txt >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          status=${PIPESTATUS[0]}
+          {
+            echo "test_output<<EOF"
+            cat test-output.txt
+            echo "EOF"
+          } >> "$GITHUB_OUTPUT"
+          exit $status
