--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -38,7 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@sentry/react": "^10.22.0",
     "@supabase/supabase-js": "^2.76.1",
-    "@tanstack/react-form": "~0.42.1",
+    "@tanstack/react-form": "^1.23.8",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-router": "^1.133.27",
     "chart.js": "^4.5.1",
