--- a/biome.json
+++ b/biome.json
@@ -66,7 +66,13 @@
         "noUnusedTemplateLiteral": "error",
         "useNumberNamespace": "error",
         "noInferrableTypes": "error",
-        "noUselessElse": "error"
+        "noUselessElse": "error",
+        "useComponentExportOnlyModules": {
+          "options": {
+            "allowConstantExport": true,
+            "allowExportNames": ["Route"]
+          }
+        }
       },
       "suspicious": {
         "recommended": true
