--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,14 +41,14 @@
     "@tanstack/react-form": "^1.23.8",
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-router": "^1.133.27",
-    "chart.js": "^4.5.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.5",
     "lucide-react": "^0.552.0",
     "react": "^18.3.1",
-    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-error-boundary": "^6.0.0",
