--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -12,7 +12,8 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["./src/*"],
-      "~/components": ["./src/components"],
+      "~/components/*": ["./src/components/*"],
+      "~/shared/*": ["./src/shared/*"],
       "~/lib": ["./src/lib/*"]
     },
     "composite": true
