--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -40,7 +40,7 @@
     "@supabase/supabase-js": "^2.89.0",
     "@tanstack/react-form": "^1.27.7",
     "@tanstack/react-query": "^5.90.16",
-    "@tanstack/react-router": "^1.144.0",
+    "@tanstack/react-router": "^1.140.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -48,6 +48,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.5",
     "lucide-react": "^0.552.0",
+    "motion": "^12.23.26",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -66,8 +67,8 @@
     "@sentry/vite-plugin": "^4.6.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query-devtools": "^5.91.2",
-    "@tanstack/react-router-devtools": "^1.144.0",
-    "@tanstack/router-plugin": "^1.145.2",
+    "@tanstack/react-router-devtools": "^1.140.5",
+    "@tanstack/router-plugin": "^1.140.5",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
